# niah_attention

./: README.md  attention_utils.py  config.py  data_preparation.py  evaluation.py  main.py  mrcr_utils.py  multi_needle.ipynb  multi_needle_mrcr.ipynb  pyproject.toml  requirements.txt  single_needle.ipynb  visualizations.py
