[project]
name = "niah_attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
